fix css scrollbar overflow x

--- a/src/app/components/one-year-angular-macedonia-event/one-year-angular-macedonia-event.component.scss
+++ b/src/app/components/one-year-angular-macedonia-event/one-year-angular-macedonia-event.component.scss
@@ -19,6 +19,7 @@
   width: 100%;
   height: 100%;
   overflow-y: scroll;
+  overflow-x: hidden;
   z-index: 1;
   scroll-snap-type: y mandatory;
 }
